--- a/music-master/src/index.html
+++ b/music-master/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Portfolio</title>
+  <title>Music Master</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" src="index.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
